--- a/UserAPI/appsettings.json
+++ b/UserAPI/appsettings.json
@@ -24,7 +24,7 @@
     }
   },
   "ConnectionStrings": {
-    "Users": "Host=localhost;Port=12000;Database=fuse8Internship;Username=someUser;Password=P@ssw0rd;"
+    "Users": "Host=localhost;Port=12000;Database=Users;Username=admin;Password=admin;"
   },
 
   "JwtSettings": {
